refactoring now, its working :)